clusters/clowder/izzy.kiwi/resources.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: website
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: website
spec:
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: nginx:1.31.5
        resources:
          limits:
            memory: "128Mi"
            cpu: "10m"
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: website-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: website-content
        configMap:
          name: website
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: website
spec:
  selector:
    app: website
  ports:
  - name: http
    port: 80
    targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: website
  namespace: website
spec:
  parentRefs:
    - name: public
      namespace: ingress
  hostnames:
    - izzy.kiwi
  rules:
    - backendRefs:
        - name: website
          port: 80
